--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <h2>作ったもの</h2>
     <ul>
       <li><a href="/panel/index.html">ビンゴ景品パネル</a></li>
-      <li><a href="/draw/draw.html">ビンゴくじ</a></li>
+      <li><a href="/named/index.html">お名前ビンゴ出た人リスト</a></li>
       <li><a href="/prob/prob.html">ビンゴ確率計算</a></li>
     </ul>
 
