--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <ul>
       <li><a href="/panel/index.html">ビンゴ景品パネル</a></li>
       <li><a href="/named/index.html">お名前ビンゴ出た人リスト</a></li>
-      <li><a href="/prob/prob.html">ビンゴ確率計算</a></li>
+      <li><a href="/prob/index.html">ビンゴ確率計算</a></li>
     </ul>
 
     <p><a href="//tsujio.org">作った人</a></p>
