Add player num parameter

--- a/html/prob/index.html
+++ b/html/prob/index.html
@@ -10,13 +10,12 @@
     ビンゴカードの 1 辺のマス数: <input type="number" id="scale" value="5" min="1"><br>
     真ん中を空ける: <input type="checkbox" id="blank" checked><br>
     最大の数字: <input type="number" id="num" value="75" min="1"><br>
+    参加者数: <input type="number" id="players" value="50" min="1"><br>
 
     <table id="sample">
     </table>
 
     <button type="button" id="start">計算開始</button>
-
-    <p>「参加者数 × ビンゴになった人の割合」が「景品の数」を超えるとき、ビンゴが終了する気がします。</p>
 
     <table id="result">
       <thead>
